Buttons and Forms

--- a/conFusion/aboutus.html
+++ b/conFusion/aboutus.html
@@ -56,7 +56,7 @@
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>
                     </li>
-                    <li><a href="contactus.html">Contact</a></li>
+                    <li><a class="fa fa-envelope-o" href="contactus.html"> Contact</a></li>
                 </ul>
             </div>
         </div>
