--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -53,7 +53,7 @@
                 </ul>
               </li>
 
-                <li><a href="contactus.html">Contact</a></li>
+                <li><a class="fa fa-envelope-o" href="contactus.html"> Contact</a></li>
             </ul>
           </div>
         </div>
