--- a/conFusion/aboutus.html
+++ b/conFusion/aboutus.html
@@ -5,10 +5,7 @@
      <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head
-         content must come *after* these tags -->
     <title>Ristorante Con Fusion: About Us</title>
-        <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -26,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Ristorante Con Fusion</a>
+                <a class="navbar-brand" href="#"><img src="img/logo.png" height=30 width=41></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -54,8 +51,7 @@
             </div>
         </div>
     </nav>
-    <header class="jumbotron">
-
+<header class="jumbotron">
 
         <div class="container">
             <div class="row row-header">
@@ -63,11 +59,14 @@
                     <h1>Ristorante con Fusion</h1>
                     <p style="padding:40px;"></p>
                     <p>We take inspiration from the World's best cuisines,
-                      and create a unique fusion experience. Our lipsmacking
-                      creations will tickle your culinary senses!</p>
+                      and create a unique fusion experience.
+                      Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-2">
+                    <p style="padding:20px;"></p>
+                    <img src="img/logo.png" class="img-responsive">
                 </div>
+
             </div>
         </div>
     </header>
