--- a/conFusion/contactus.html
+++ b/conFusion/contactus.html
@@ -15,12 +15,6 @@
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/mystyles.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body>
@@ -33,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Ristorante Con Fusion</a>
+                <a class="navbar-brand" href="#"><img src="img/logo.png" height=30 width=41></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -62,16 +56,22 @@
             </div>
         </div>
     </nav>  
-    <header class="jumbotron">
+<header class="jumbotron">
+
         <div class="container">
             <div class="row row-header">
                 <div class="col-xs-12 col-sm-8">
                     <h1>Ristorante con Fusion</h1>
                     <p style="padding:40px;"></p>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                    <p>We take inspiration from the World's best cuisines,
+                      and create a unique fusion experience.
+                      Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-2">
+                    <p style="padding:20px;"></p>
+                    <img src="img/logo.png" class="img-responsive">
                 </div>
+
             </div>
         </div>
     </header>
