--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -15,12 +15,18 @@
 
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap-social.css" rel="stylesheet">
+<style>
+strong {
+    color: white;
+}
+</style>
 </head>
 
 <body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
+
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
@@ -31,7 +37,7 @@
             <a class="navbar-brand" href="#"><img src="img/logo.png" height=30 width=41></a>
           </div>
 
-          <div id="navbar" class="navbar-collapse collapse">
+          <div id="navbar" class="navbar-collapse collapse col-sm-6">
             <ul class="nav navbar-nav">
               <li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"
                   aria-hidden="true"></span> Home</a></li>
@@ -52,10 +58,36 @@
                   <li><a href="#">Weekend Brunch</a></li>
                 </ul>
               </li>
-
-                <li><a class="fa fa-envelope-o" href="contactus.html"> Contact</a></li>
+            
+            <li><a class="fa fa-envelope-o" href="contactus.html"> Contact</a></li>
             </ul>
           </div>
+
+            <div>
+                <form class="form-inline navbar-form navbar-right">
+                        <div class="form-group">
+                            <div>
+                                <input type="email" class="form-control" id="email" placeholder="email">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div>
+                                <input type="password" class="form-control" id="password" placeholder="password">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="checkbox">
+                                <label class="checkbox-inline">
+                                    <input type="checkbox" name="remember" value="">
+                                    <strong>Remember me</strong>
+                                </label>
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-info">Sign in</button> 
+                    </form>
+                </div>
         </div>
     </nav>
 
