--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -15,11 +15,11 @@
 
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap-social.css" rel="stylesheet">
-<style>
-strong {
-    color: white;
-}
-</style>
+  <style>
+      strong {
+        color: white;
+        }
+  </style>
 </head>
 
 <body>
@@ -107,6 +107,11 @@ strong {
                     <img src="img/logo.png" class="img-responsive">
                 </div>
 
+                <div class="col-xs-12 col-sm-2">
+                    <p style="padding:40px;"></p>
+                    <button type="button" class="btn btn-warning btn-block">Reserve Table</button>
+                </div>
+
             </div>
         </div>
     </header>
@@ -125,7 +130,7 @@ strong {
                          src="img/uthappizza.png" alt="Uthappizza">
                         </a>
                     </div>
-                    <div class="media-body">
+                <div class="media-body">
                         <h2 class="media-heading">Uthappizza  <span class="label label-danger">Hot</span> 
                          <span class="badge">$4.99</span> </h2>
                         <p>A unique combination of Indian Uthappam (pancake) and
@@ -145,12 +150,23 @@ strong {
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five
-                  different salads, six enticing appetizers, six main entrees
-                  and five choicest desserts. Free flowing bubbly and soft drinks.
-                   All for just $19.99 per person </p>
-                <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="media-heading">Weekend Grand Buffet
+                        <span class="label label-danger">New</span>
+                        </h2>
+                        <p>Featuring mouthwatering combinations with a choice of five
+                        different salads, six enticing appetizers, six main entrees
+                        and five choicest desserts. Free flowing bubbly and soft drinks.
+                        All for just $19.99 per person </p>
+                    </div>
+                    <div class="media-right">
+                        <a href="#">
+                            <img class="media-object" src="img/buffet.png" alt="Buffet">
+                        </a>
+                    </div>
+                    <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                </div>
             </div>
         </div>
 
