--- a/conFusion/aboutus.html
+++ b/conFusion/aboutus.html
@@ -46,7 +46,8 @@
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>
                     </li>
-                    <li><a class="fa fa-envelope-o" href="contactus.html"> Contact</a></li>
+                    <li><a href="contactus.html"><span class="fa fa-envelope-o"
+                      aria-hidden="true"></span> Contact</a></li>
                 </ul>
             </div>
         </div>
