--- a/conFusion/contactus.html
+++ b/conFusion/contactus.html
@@ -51,11 +51,13 @@
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>
                     </li>
-                    <li class="active"><a class="fa fa-envelope-o" href="contactus.html"> Contact</a></li>
+                    <li class="active"><a href="contactus.html"><span class="fa fa-envelope-o"
+                      aria-hidden="true"></span> Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>  
+    
 <header class="jumbotron">
 
         <div class="container">
