--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -54,7 +54,8 @@
                 </ul>
               </li>
             
-            <li><a class="fa fa-envelope-o" href="contactus.html"> Contact</a></li>
+            <li><a href="contactus.html"><span class="fa fa-envelope-o"
+                      aria-hidden="true"></span> Contact</a></li>
             </ul>
           </div>
 
@@ -104,7 +105,7 @@
 
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
-                    <a href="#table"><button type="button" class="btn btn-warning">Reserve Table</button></a>
+                    <a href="#table"><button type="button" class="btn btn-warning btn-block">Reserve a Table</button></a>
                 </div>
 
             </div>
@@ -155,7 +156,7 @@
                         and five choicest desserts. Free flowing bubbly and soft drinks.
                         All for just $19.99 per person </p>
                     </div>
-                    <div class="media-right">
+                    <div class="media-right media-middle">
                         <a href="#">
                             <img class="media-object" src="img/buffet.png" alt="Buffet">
                         </a>
